refacto banner et correctif collapse, responsive slideshow

--- a/src/assets/styles/components/Banner.scss
+++ b/src/assets/styles/components/Banner.scss
@@ -1,4 +1,5 @@
 .banner {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -9,25 +10,29 @@
     radius: 25px;
   }
   box-shadow: 0px 4px 4px 0px #00000040;
-  position: relative;
-  h1 {
-    position: relative;
-    color: $secondary;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border: {
+      radius: 25px;
+    }
+    filter: brightness(50%);
+  }
+
+  .banner_title {
+    position: absolute;
+    h1 {
+      color: white;
+    }
   }
 }
 
-.banner::before {
-  position: absolute;
-  content: "";
-  background-image: url("@/assets/images/cote.png");
-  background-size: cover;
-  background-position: center;
-  border: {
-    radius: 25px;
+
+@media screen and (max-width: 780px) {
+  .banner{
+    height: 111px;
+  
   }
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  filter: brightness(50%);
 }
