--- a/src/assets/styles/components/Collapse.scss
+++ b/src/assets/styles/components/Collapse.scss
@@ -10,13 +10,20 @@
     z-index: 1;
     padding: 8px;
     border-radius: 5px;
+    h2 {
+      margin: 0;
+
+      color: $secondary;
+    }
     button {
       background-color: transparent;
       color: $third;
       border: none;
       margin-right: 10px;
+      cursor: pointer;
+      animation: cancelRotation 200ms linear;
       &.rotate {
-        animation: rotation 1s linear forwards;
+        animation: rotation 200ms linear forwards;
       }
 
       i {
@@ -24,25 +31,16 @@
       }
     }
   }
-  h2 {
-    margin: 0;
-
-    color: $secondary;
-  }
-  p {
-    padding: 10px;
-    background-color: $third;
-    animation: dropDown 1s linear;
-  }
+  p,
   ul {
     padding: 10px;
     background-color: $third;
     list-style: none;
-    animation: dropDown 1s linear;
+    animation: dropDownOpen 300ms linear;
   }
 }
 
-@keyframes dropDown {
+@keyframes dropDownOpen {
   from {
     transform: translateY(-100%);
   }
@@ -57,5 +55,13 @@
   }
   to {
     transform: rotate(-180deg);
+  }
+}
+@keyframes cancelRotation {
+  from {
+    transform: rotate(-180deg);
+  }
+  to {
+    transform: rotate(0deg);
   }
 }
